--- a/src/main/resources/templates/adminSide.html
+++ b/src/main/resources/templates/adminSide.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" >
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Title</title>
 </head>
 <body>
 
+<div th:replace="header">...</div>
 
-<h2> hej med dig, det her er admin side heheh</h2>
+<h2>Admin side</h2>
+
+<form method="get" action="/addPlayer">
+    <button type="submit">Tilføj spiller</button>
+</form>
+<form method="get" action="/addItem">
+    <button type="submit">Tilføj shop inventar</button>
+</form>
 
 </body>
 </html>
