--- a/src/main/resources/templates/adminSide.html
+++ b/src/main/resources/templates/adminSide.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" >
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <title>Title</title>
 </head>
 <body>
@@ -11,11 +11,14 @@
 
 <h2>Admin side</h2>
 
-<form method="get" action="/addPlayer">
-    <button type="submit">Tilføj spiller</button>
+<form method="GET" action="/adminPlayer">
+    <button type="submit">Adminstrer spillere</button>
 </form>
-<form method="get" action="/addItem">
-    <button type="submit">Tilføj shop inventar</button>
+<form method="get" action="/adminShop">
+    <button type="submit">Adminstrer shop</button>
+</form>
+<form method="get" action="/adminStaff">
+    <button type="submit">Adminstrer personale</button>
 </form>
 
 </body>
