--- a/src/main/resources/templates/addPlayer.html
+++ b/src/main/resources/templates/addPlayer.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="#" th:action="@{/addPlayer}" th:object="${player}" method="post">
+    <form action="#" th:action="@{/addPlayer}" th:object="${player}" method="post" align="center">
 
         <p>Trøjenummer: <input type="number" th:field="*{id}"></p>
         <p>Age: <input type="number" th:field="*{age}"></p>
