Verify virker stadig ikke

--- a/src/main/resources/templates/adminPlayers.html
+++ b/src/main/resources/templates/adminPlayers.html
@@ -16,7 +16,7 @@
 <form method="get" action="/deletePlayer">
     <button type="submit">Slet spiller</button>
 </form>
-<form method="get" action="/addItem">
+<form method="get" action="/updatePlayer">
     <button type="submit">Opdater spillerinfo</button>
 </form>
 </body>
