--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -8,5 +8,13 @@
 <div th:replace="header">...</div>
 <body>
 
+    <form action="#" th:action="@{/addItem}" th:object="${item}" method="post" align="center">
+
+        <p>Name: <input type="text" th:field="*{name}"></p>
+        <p>Price: <input type="number" th:field="*{price}"></p>
+
+
+        <input type="submit" value="Tilføj" class="btn add2"/>
+    </form>
 </body>
 </html>
