--- a/src/main/resources/templates/adminShop.html
+++ b/src/main/resources/templates/adminShop.html
@@ -8,5 +8,16 @@
 <div th:replace="header">...</div>
 <body>
 
+<h2>Adminstrer Shop </h2>
+<form method="get" action="/addItem">
+    <button type="submit">Tilføj shop inventar</button>
+</form>
+<form method="get" action="/deleteItem">
+    <button type="submit">Slet shop inventar</button>
+</form>
+<form method="get" action="/updateItem">
+    <button type="submit">Opdater inventar information</button>
+</form>
+
 </body>
 </html>
