--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -48,6 +48,7 @@
     <ul>
         <li><a href="/">Hjem</a></li>
         <li><a href="/players">Spillere</a></li>
+        <li><a href="/shop">Shop</a></li>
         <li style="float:right"><a class="button" href="/login"><img src="https://icons-for-free.com/iconfiles/png/512/login+person+profile+user+users+icon-1320166527284195604.png" height="30" width="30"/></a></li>
 
     </ul>
