Delete og update virker ikke, alt andet fint

--- a/src/main/resources/templates/adminStaff.html
+++ b/src/main/resources/templates/adminStaff.html
@@ -8,5 +8,16 @@
 <div th:replace="header">...</div>
 <body>
 
+<h2>Adminstrer Personale </h2>
+<form method="get" action="/addStaff">
+    <button type="submit">Tilføj medarbejder</button>
+</form>
+<form method="get" action="/deleteStaff">
+    <button type="submit">Slet medarbejder</button>
+</form>
+<form method="get" action="/updateStaff">
+    <button type="submit">Opdater medarbejder information</button>
+</form>
+
 </body>
 </html>
