--- a/src/main/resources/templates/addStaff.html
+++ b/src/main/resources/templates/addStaff.html
@@ -5,9 +5,18 @@
     <link rel="stylesheet" type="text/css" href="../static/style.css">
     <title>Tilføj medarbejdere</title>
 </head>
+<div th:replace="header">...</div>
 
 <body>
-<div th:replace="header">...</div>
+
+<form action="#" th:action="@{/addStaff}" th:object="${staff}" method="post" align="center">
+
+    <p>Navn: <input type="text" th:field="*{name}" required></p>
+    <p>Jobtitel: <input type="text" th:field="*{jobTitel}" required></p>
+    <p>Email: <input type="text" th:field="*{email}" required></p>
+
+    <input type="submit" value="Tilføj" class="btn add2"/>
+</form>
 
 </body>
 </html>
