--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Shop</title>
+    <title>Medarbejdere</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -13,15 +13,17 @@
 <table class="tables" align="center">
     <thead>
     <tr>
-        <th>Product Name</th>
-        <th>Price</th>
+        <th>Navn</th>
+        <th>Jobtitel</th>
+        <th>Email</th>
     </tr>
     </thead>
     <tbody>
 
-    <tr th:each="item: ${items}">
-        <td th:text="${item.getName()}"></td>
-        <td th:text="${item.getPrice()}"></td>
+    <tr th:each="staff: ${staffs}">
+        <td th:text="${staff.getName()}"></td>
+        <td th:text="${staff.getJobTitel()}"></td>
+        <td th:text="${staff.getEmail()}"></td>
     </tr>
     </tbody>
 </table>
